# option-operations

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: CI.yml
src/: add.rs  checked_error.rs  div.rs  eq.rs  error.rs  lib.rs  macros.rs  min_max.rs  mul.rs  option_checked.rs  ord.rs  rem.rs  sub.rs
src/macros/: impl_for.rs  mod.rs  option_op.rs  option_op_assign.rs  option_op_checked.rs  option_op_overflowing.rs  option_op_saturating.rs  option_op_wrapping.rs
