[package]
name = "option-operations"
version = "0.1.0"
authors = ["François Laignel <fengalin@free.fr>"]
categories = ["rust-patterns", "no-std", "mathematics"]
description = "TODO"
keywords = ["option", "operations", "ord", "cmp", "add", "mul"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/fengalin/opt-operations"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
