[package]
name = "option-operations"
version = "0.3.99"
authors = ["François Laignel <fengalin@free.fr>"]
categories = ["rust-patterns", "no-std", "mathematics"]
description = "Traits and auto-implementations to improve arithmetic operations usability when dealing with `Option`s."
keywords = ["option", "arithmetic", "operations", "ord", "cmp"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/fengalin/opt-operations"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["std"]

# Provide impls for common standard library types like
# std::time::Instant and impl std traits like Display & Error.
# Requires a dependency on the Rust standard library.
std = []
