[package]
name = "option-operations"
version = "0.6.0"
authors = ["François Laignel <fengalin@free.fr>"]
categories = ["rust-patterns", "no-std", "mathematics"]
description = "Traits and auto-implementations to improve arithmetic operations usability when dealing with `Option`s."
documentation = "https://docs.rs/option-operations"
keywords = ["option", "arithmetic", "operations", "ord", "cmp"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/fengalin/option-operations"
edition = "2018"
rust-version = "1.54"

[features]
default = ["std"]

# Provide impls for common standard library types like
# std::time::Instant and impl std traits like Display & Error.
# Requires a dependency on the Rust standard library.
std = []

[dependencies]
pastey = "0.2.0"
